# code-review-benchmark

./: .gitignore  README.md  assemble.py  bq_extract.py  config.py  gh_enrich.py  main.py  models.py  pyproject.toml
dashboard/: app.py  data.py
db/: connection.py  queries.py  repository.py  schema.py
experimental/: pr_tree.py
llm/: prompts.py  schemas.py
methodology/: full.md  summary.md
offline/: README.md
offline/analysis/: benchmark_dashboard.html  benchmark_dashboard.json
offline/code_review_benchmark/: step1_download_prs.py  step3_judge_comments.py
offline/results/anthropic_claude-opus-4-5-20251101/: candidates.json  evaluations.json
offline/results/anthropic_claude-sonnet-4-5-20250929/: candidates.json  evaluations.json
offline/results/openai_gpt-5.2/: candidates.json  evaluations.json
offline/tests/: test_step1.py  test_step3.py
online/api_service/: Cargo.toml  README.md
online/api_service/src/: compute.rs  db.rs  handlers.rs  main.rs  model.rs  tests.rs
online/api_service/static/: index.html
online/etl/: README.md  config.py  main.py
online/etl/dashboard/: app.py  data.py
online/etl/db/: queries.py  repository.py  schema.py
online/etl/pipeline/: assemble.py  backfill_pr_author.py  discover.py  volumes.py
pipeline/: analyze.py  label.py
service/src/: main.rs
service/static/: index.html
